crates/swc_ecma_parser/tests/test262-error-references/fail/d594faccae1187d7.js.stderr
error: A `set` accessor must have a corresponding `get` accessor
 --> $DIR/tests/test262-parser/fail/d594faccae1187d7.js:1:8
  |
1 | ({ set s() { } })
  |        ^

